# gaiax-catalogue-llm-api

./: .env.example  Dockerfile  README.md  pyproject.toml
src/: endpoint.py
src/backend/: SQL_bd.py  llms_to_search.py
src/backend/embeddings/: embed_datasets.py  embedding.py  vector_db.py
